# rs-aws-saml

./: Cargo.toml  profiles.toml
.codex/environments/: environment.toml
.github/workflows/: release.yml
src/: aws.rs  config.rs  headless.rs  main.rs
src/ui/: cards.rs  mod.rs  tabs.rs
