[package]
name = "rs-aws-saml"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
anyhow = "1.0"
headless_chrome = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
totp-rs = "5.7"
directories = "5.0"
async-channel = "2.3"
url = "2.5"
aws-config = "1"
aws-sdk-sts = "1"
aws-smithy-types = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
configparser = "1.0"
serde_json = "1.0"

# Optional, for default bundled assets
gpui-component-assets = "0.5.1"
